[package]
name = "rustsfm"
version = "0.1.0"
edition = "2021"
authors = ["Felix Glinka <devglinka@posteo.eu>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "^0.8.0"
argmin-math = { version = "^0.3.0", features = ["nalgebra_v0_32-serde"] }
serde = { version="^1.0.152", features = ["derive"] }
na = { package = "nalgebra", version = "0.32", features = ["serde-serialize"] }
cv = { package = "opencv", version = "0.76", features = ["features2d", "videoio", "flann", "highgui"] }
cv-convert = { version = "^0.22.0", default-features = false, features = ["opencv_0-76", "nalgebra_0-32"] }
quick-error = "^2.0.1"
bincode = "^1.3.3"
